--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing notifications</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Nagios type</th>
@@ -25,13 +25,9 @@
         <td><%= notification.nagios_attempt %></td>
         <td><%= notification.nagios_message %></td>
         <td><%= link_to 'Show', notification %></td>
-        <td><%= link_to 'Edit', edit_notification_path(notification) %></td>
-        <td><%= link_to 'Destroy', notification, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Notification', new_notification_path %>
