--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,18 +1,34 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name,:html => {:class => "well form-horizontal"}, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+    <div class="form-group">
+      <%= f.label :email, {:class => "col-sm-2 control-label"} %>
+      <div class="col-sm-10">
+        <%= f.email_field :email, {autofocus: true,:class => "form-control"} %>
+      </div>
+    </div>
 
-  <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+    <div class="form-group">
+      <%= f.label :password, {:class => "col-sm-2 control-label"} %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %>
+      <div class="col-sm-10">
+        <%= f.password_field :password, {autocomplete: "off",:class => "form-control"} %>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+      </div>
+    </div>
 
-  <div><%= f.submit "Sign up" %></div>
+    <div class="form-group">
+      <%= f.label :password_confirmation,{:class => "col-sm-2 control-label"} %>
+      <div class="col-sm-10">
+        <%= f.password_field :password_confirmation, {autocomplete: "off",:class => "form-control"} %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit "Sign up", {:class=>"btn btn-default"} %>
+      </div>
+    </div>
 <% end %>
 
 <%= render "users/shared/links" %>
