--- a/app/views/hosts/index.html.erb
+++ b/app/views/hosts/index.html.erb
@@ -1,19 +1,40 @@
 <h1>Hosts</h1>
-<table class="table">
-  <thead>
-  <tr>
-    <th>Nagios type</th>
-    <th>Nagios hostname</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% @hosts.each_with_index do |host, index| %>
-      <tr>
-        <td><%= index+1 %></td>
-        <td><%=link_to host,notifications_path({:host_name=> host}) %></td>
-      </tr>
+<div class="row">
+  <% @hosts.each do |host| %>
+      <!--<%= link_to notifications_path({:host_name=> host}) do %>-->
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <div class="panel-info">
+                <div class="panel-heading">
+                  <h4 class="list-group-item-heading"><%= host %></h4>
+                </div>
+              </div>
+              <div class="panel-default">
+                <div class="panel-heading">
+                  <h5 class="list-group-item-heading">Health Metre</h5>
+                </div>
+                <div class="panel-body">
+                  Panel content
+                </div>
+              </div>
+              <div class="panel-default">
+                <div class="panel-heading">
+                  <h5 class="list-group-item-heading">Crash Reports</h5>
+                </div>
+                <div class="panel-body">
+                  Panel content
+                </div>
+              </div>
+              <div class="panel-default">
+                <div class="panel-heading">
+                  <h5 class="list-group-item-heading">Notifications</h5>
+                </div>
+                <div class="panel-body">
+                  Panel content
+                </div>
+              </div>
+            </div>
+          </div>
+      <!--<% end %>-->
   <% end %>
-  </tbody>
-</table>
+</div>
